--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -258,16 +258,83 @@ label p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 30vw;
+    height: calc(100vh - 150px);
 }
 
-.section-index-adm-panel h1 {
+.section-index-white-area {
+    height: 100%;
+    width: 100%;
+    background-color: #fff;
+}
+
+.section-index-black-area {
+    height: 100%;
+    width: 100%;
+    background-color: #161616;
+}
+
+.home-info-area {
+    position: fixed;
+    top: 25%;
+    left: 25%;
+}
+
+.home-info-area-count {
+    width: 60vw;
+    display: grid;
+    grid-gap: 15px;
+    grid-template-areas: 
+        "area1 area1 area1"
+        "area2 area3 area4"
+        "area5 area5 area5";
+}
+
+.home-info-area-tittle {
+    color: #fff;
+    margin-bottom: 20px;
+    grid-area: area1;
+}
+
+.count-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #FFFFFF;
+    border-radius: 5px;
+    padding: 20px 10px;
+}
+
+.count-box-info h4 {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6F6F;
+}
+
+.count-box-info-number {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
     color: #F30000;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
-.section-index-adm-panel h2 {
-    color: #bdbdbd;
+.count-box-info-date {
+    font-size: 10px;
+    line-height: 11px;
+    color: #949494;
+}
+
+.box1 {
+    grid-area: area2;
+}
+
+.box2 {
+    grid-area: area3;
+}
+
+.box3 {
+    grid-area: area4;
 }
 
 .header-adm-panel-logo {
@@ -651,8 +718,6 @@ label p {
     text-align: center;
     font-size: 18px;
     background: #fff;
-
-    /* Center slide text vertically */
     display: -webkit-box;
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -887,7 +952,7 @@ label p {
 
 .section-area-users-table {
     max-height: 65vh;
-    overflow-y: scroll;
+    overflow: auto;
     box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.15);
     border-radius: 13px;
 }
@@ -1341,11 +1406,6 @@ td {
 .category-area {
     grid-area: area4;
     width: 250px;
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
     border-radius: 5px;
     border: 0.5px solid #636363;
     box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0.2);
@@ -1356,7 +1416,7 @@ td {
 .category-area h4 {
     width: 100%;
     border-bottom: 0.5px solid #636363;
-    margin-top: 5px;
+    margin: 10px 0;
     text-align: center;
     padding-bottom: 5px;
 }
@@ -1375,7 +1435,7 @@ td {
 
 .category-list fieldset {
     width: 90%;
-    padding: 20px 10px;
+    padding: 10px 10px;
 }
 
 .button-add-category-area {
@@ -1454,6 +1514,29 @@ td {
 }
 
 /*Categories CSS*/
+
+.section-category-table {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+}
+
+.section-category-table h3 {
+    width: 60vw;
+    margin-bottom: 20px;
+    padding-left: 20px;
+}
+
+.section-area-categories-table {
+    max-width: 60vw;
+    max-height: 65vh;
+    overflow: auto;
+    box-shadow: 0px 0px 4px 1px rgb(0 0 0 / 15%);
+    border-radius: 13px;
+}
+
 .add-category-form {
     display: flex;
     justify-content: flex-start;
@@ -1474,11 +1557,13 @@ td {
 .input-category-name {
     width: 250px;
     height: 25px;
+    padding-left: 10px;
 }
 
 .input-category-desc {
     width: 500px;
     height: 25px;
+    padding-left: 10px;
 }
 
 .td-category {
@@ -1492,6 +1577,86 @@ td {
 
 .products-count {
     width: 106px;
+}
+
+/*Add Categories CSS*/
+
+.edit-categorie-form-area {
+    max-width: 60vw;
+    overflow: auto;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.15);
+    border-radius: 13px;
+}
+
+.edit-categorie-form-area {
+    height: 70vh;
+}
+
+.edit-category-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.edit-category-form-label {
+    width: 60vw;
+    padding: 10px 10px;
+}
+
+.edit-category-form-label p {
+    font-size: 14px;
+}
+
+.input-edit-category-name, .input-edit-category-desc {
+    width: 100%;
+    height: 40px;
+    background: #FFFFFF;
+    border: 0.5px solid #636363;
+    box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    padding-left: 5px;
+    margin-top: 10px;
+    font-size: 14px;
+}
+
+.input-edit-category-desc {
+    resize: none;
+    height: 300px;
+    font-size: 16px;
+    padding-top: 10px;
+}
+
+.button-submit-edit-categorie-area {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin: 10px;
+}
+
+.form-edit-categorie-submit {
+    width: 160px;
+    height: 25px;
+    background-color: transparent;
+    box-shadow: -1px 2px 4px rgba(0, 0, 0, 0.25);
+    border: none;
+    border-radius: 16px;
+    text-decoration: none;
+    color: #fff;
+    background-color: #f30000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 10px;
+    font-weight: 700;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.form-edit-categorie-submit:hover {
+    background-color: #fff;
+    color: #f30000;
 }
 
 @media (max-width: 1400px) {
