--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,4 @@
-/* Google Font Import - Poppins */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 
 * {
     font-family: 'Montserrat', sans-serif;
@@ -735,7 +734,7 @@ label p {
     display: flex;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
-    -webkit-justify-content: center;
+    justify-content: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
     -webkit-align-items: center;
@@ -1352,7 +1351,7 @@ label p {
     width: 100%;
 }
 
-.section-about-form-left form button {
+.section-about-form-left form button, .section-cart-area-right form button {
     width: 100%;
     background-color: #f30000;
     border: none;
@@ -1366,6 +1365,217 @@ label p {
 }
 
 .section-about-form-left form button:hover {
+    color: #f30000;
+    background-color: #fff;
+    border: 1px solid #f30000;
+}
+
+/*Cart Page*/
+
+.section-cart-area {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+}
+
+.section-cart-area-left {
+    margin-right: 40px;
+}
+
+.section-cart-area-left h3 {
+    margin-bottom: 20px;
+    font-size: 16px;
+    line-height: 20px;
+    color: #000000;
+}
+
+.section-cart-products {
+    background: #FFFFFF;
+    box-shadow: 0px 0px 4px 3px rgba(0, 0, 0, 0.1);
+    border-radius: 7px;
+    padding: 30px 10px;
+    height: 665px;
+    overflow-y: scroll;
+}
+
+.section-cart-product {
+    display: grid;
+    grid-template-areas: 
+    "area1 area1 area2 area2"
+    "area3 area4 area5 area6";
+    grid-gap: 15px;
+    align-items: center;
+    border-bottom: 2px solid #ccc;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+}
+
+.cart-desc-tittle {
+    grid-area: area1;
+    font-size: 14px;
+    line-height: 17px;
+    color: #929293;
+}
+
+.cart-qtd-tittle {
+    grid-area: area2;
+    font-size: 14px;
+    line-height: 17px;
+    color: #929293;
+    width: 70px;
+    text-align: center;
+}
+
+.section-cart-products img {
+    grid-area: area3;
+    width: 100px;
+    border-radius: 5px;
+}
+
+.cart-desc-text {
+    grid-area: area4;
+    max-width: 300px;
+}
+
+.qtd-cart-buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    grid-area: area5;
+}
+
+.qtd-cart-buttons i {
+    cursor: pointer;
+}
+
+.qtd-cart-buttons input {
+    font-size: 12px;
+    margin: 5px;
+    border: none;
+}
+
+.cart-del-button {
+    grid-area: area6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 90px;
+    background-color: #f30000;
+    color: #fff;
+    height: 18px;
+    width: 18px;
+    cursor: pointer;
+    padding-bottom: 2px;
+    font-size: 10px;
+}
+
+.cart-del-button p {
+    text-align: center;
+}
+
+.botom-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    margin-top: 10px;
+}
+
+.clear-list {
+    font-size: 10px;
+    line-height: 12px;
+    color: #F30000;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.clear-list:hover {
+    border-bottom: 1px solid #f30000;
+}
+
+.more-products {    
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 16px;
+    color: #F30000;
+    border: 1px solid #F30000;
+    filter: drop-shadow(-1px 2px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 5px;
+    background-color: #fff;
+    padding: 6px 20px;
+    text-decoration: none;
+}
+
+.more-products:hover {
+    color: #fff;
+    background-color: #f30000;
+}
+
+.section-cart-area-right form input {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.section-cart-area-right form label p {
+    margin-bottom: 10px;
+}
+
+.section-cart-area-right form .input-name, .section-cart-area-right form .input-cnpj {
+    width: 500px;
+    height: 35px;
+    border: 1px solid #f30000;
+    border-radius: 5px;
+    margin-bottom: 25px;
+    outline: 0;
+    padding-left: 10px;
+}
+
+.section-cart-area-right form .input-email, .section-cart-area-right form .input-phone {
+    width: 230px;
+    height: 35px;
+    border: 1px solid #f30000;
+    border-radius: 5px;
+    margin-bottom: 25px;
+    outline: 0;
+    padding-left: 10px;
+}
+
+.section-cart-area-right form textarea {
+    width: 500px;
+    height: 150px;
+    border: 1px solid #f30000;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    resize: none;
+    outline: 0;
+    padding: 10px;
+}
+
+.form-double-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.section-cart-area-right form button, .section-cart-area-right form button {
+    width: 100%;
+    background-color: #f30000;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    box-shadow: -1px 2px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    padding: 5px 0; 
+    cursor: pointer;
+    font-weight: 600;
+}
+
+.section-cart-area-right form button:hover {
     color: #f30000;
     background-color: #fff;
     border: 1px solid #f30000;
@@ -1801,10 +2011,6 @@ td {
     margin: 0 0 15px 10px;
 }
 
-.section-area-products-form {
-    
-}
-
 .product-form label p {
     margin: 10px 0 10px 0 ;
 }
@@ -2186,6 +2392,10 @@ td {
 }
 
 @media (max-width: 1300px) {
+    .category-box {
+        width: 330px;
+    }
+
     .label-details, .label-desc {
         width: 650px;
         margin-right: 20px;
@@ -2205,18 +2415,88 @@ td {
 }
 
 @media (max-width: 1000px) {
+    .section-categories-groups {
+        flex-direction: column;
+    }
+
+    .category-box {
+        width: 80vw;
+        margin-bottom: 40px;
+    }
+
+    .section-catalog-download {
+        flex-direction: column;
+        margin: 40px;
+    }
+
+    .section-about {
+        flex-direction: column;
+    }
+
     .label-details, .label-desc {
         width: 350px;
         margin-right: 20px;
     }
+
+    .section-about-left {
+        margin: 0;
+    }
+
+    .section-about-img {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 800px) {
+    .section-two-banners {
+        flex-direction: column;
+    }
+
+    .section-footer-area {
+        grid-template-areas:
+        "item1 item2"
+        "item3 item4"
+        "item6 .";
+    }
+
+    .footer-area-about-us {
+        margin: 0;
+    }
 }
 
 @media (max-width: 545px) {
+    .product-box {
+        width: 95vw ;
+    }
     .login-modal-area {
         width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    .products-carrousell-tittle {
+        margin: 0;
+    }
+
+    .section-footer-area {
+        grid-template-areas:
+        "item1"
+        "item2"
+        "item3"
+        "item4"
+        "item6";
+    }
+    
+    .footer-area-contact, .footer-area-social, .footer-area-menu, .footer-area-about-us, .footer-area-location {
+        text-align: center;
+        margin-bottom: 10px;
+    }  
+
+    .footer-area-social ul li {
+        justify-content: center;
     }
 
     h1 {
@@ -2225,6 +2505,11 @@ td {
 }
 
 @media (max-width: 350px) {
+    
+    .category-box {
+        width: 90vw;
+    }
+
     .login-form input {
         width: 290px;
     }
