--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,4 @@
-/* Google Font Import - Poppins */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 
 * {
     font-family: 'Montserrat', sans-serif;
@@ -462,6 +461,141 @@ label p {
     height: 18px;
 }
 
+.mobile-menu {
+    display: none;
+}
+
+#menu li {
+    border-bottom: 1px solid #333;
+}
+
+#menu li a {
+    text-decoration: none;
+    color: #fff;
+    opacity:1;
+    font-size: 1.5em;
+    font-weight: 400;
+    transition: 200ms;
+  }
+
+a:hover {
+    opacity:0.5;
+  }
+
+#menu {
+    padding: 0;
+    list-style-type: none;
+  }
+  
+.container {
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 70px;
+  }
+  
+.content {
+    width: 100%;
+    background-color: #F5F6FA;
+    overflow: hidden;
+    position: fixed;
+    TOP: 0;
+  }
+
+.mobile-nav {
+    background-color: #1E1E23;
+    height: 65px;
+  }
+  
+.mobile-search-form form {
+    background-color: #111;
+}
+#menuToggle {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 25px;
+    left: 25px;
+    z-index: 1;
+    -webkit-user-select: none;
+    user-select: none;
+  }
+  
+#menuToggle input {
+    display: flex;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+  }
+  
+#menuToggle span {
+    display: flex;
+    width: 29px;
+    height: 2px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #ffffff;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 5px 0px;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+  }
+  
+#menuToggle span:first-child {
+    transform-origin: 0% 0%;
+  }
+  
+#menuToggle span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+  }
+  
+#menuToggle input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-3px, -1px);
+    background: #fff;
+  }
+
+#menuToggle input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+  
+#menuToggle input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+  
+#menu {
+    position: fixed;
+    width: 110vw;
+    height: 120vh;
+    box-shadow: 0 0 10px #85888C;
+    margin: -50px 0 0 -50px;
+    padding: 50px 60px 0 50px;
+    padding-top: 125px;
+    background-color: #000;
+    -webkit-font-smoothing: antialiased;
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  }
+  
+#menu li {
+    padding: 10px 0;
+    transition-delay: 2s;
+  }
+  
+#menuToggle .sandwiche-button:checked ~ ul {
+    transform: none;
+  }
+
+#menuToggle .sandwiche-button:checked .content {
+    transform: none;
+  }
+
 .section-header-menu-area-all {
     margin: 10px 20px;
 }
@@ -735,7 +869,7 @@ label p {
     display: flex;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
-    -webkit-justify-content: center;
+    justify-content: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
     -webkit-align-items: center;
@@ -1352,7 +1486,7 @@ label p {
     width: 100%;
 }
 
-.section-about-form-left form button {
+.section-about-form-left form button, .section-cart-area-right form button {
     width: 100%;
     background-color: #f30000;
     border: none;
@@ -1366,6 +1500,217 @@ label p {
 }
 
 .section-about-form-left form button:hover {
+    color: #f30000;
+    background-color: #fff;
+    border: 1px solid #f30000;
+}
+
+/*Cart Page*/
+
+.section-cart-area {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+}
+
+.section-cart-area-left {
+    margin-right: 40px;
+}
+
+.section-cart-area-left h3 {
+    margin-bottom: 20px;
+    font-size: 16px;
+    line-height: 20px;
+    color: #000000;
+}
+
+.section-cart-products {
+    background: #FFFFFF;
+    box-shadow: 0px 0px 4px 3px rgba(0, 0, 0, 0.1);
+    border-radius: 7px;
+    padding: 30px 10px;
+    height: 665px;
+    overflow-y: scroll;
+}
+
+.section-cart-product {
+    display: grid;
+    grid-template-areas: 
+    "area1 area1 area2 area2"
+    "area3 area4 area5 area6";
+    grid-gap: 15px;
+    align-items: center;
+    border-bottom: 2px solid #ccc;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+}
+
+.cart-desc-tittle {
+    grid-area: area1;
+    font-size: 14px;
+    line-height: 17px;
+    color: #929293;
+}
+
+.cart-qtd-tittle {
+    grid-area: area2;
+    font-size: 14px;
+    line-height: 17px;
+    color: #929293;
+    width: 70px;
+    text-align: center;
+}
+
+.section-cart-products img {
+    grid-area: area3;
+    width: 100px;
+    border-radius: 5px;
+}
+
+.cart-desc-text {
+    grid-area: area4;
+    max-width: 300px;
+}
+
+.qtd-cart-buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    grid-area: area5;
+}
+
+.qtd-cart-buttons i {
+    cursor: pointer;
+}
+
+.qtd-cart-buttons input {
+    font-size: 12px;
+    margin: 5px;
+    border: none;
+}
+
+.cart-del-button {
+    grid-area: area6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 90px;
+    background-color: #f30000;
+    color: #fff;
+    height: 18px;
+    width: 18px;
+    cursor: pointer;
+    padding-bottom: 2px;
+    font-size: 10px;
+}
+
+.cart-del-button p {
+    text-align: center;
+}
+
+.botom-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    margin-top: 10px;
+}
+
+.clear-list {
+    font-size: 10px;
+    line-height: 12px;
+    color: #F30000;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.clear-list:hover {
+    border-bottom: 1px solid #f30000;
+}
+
+.more-products {    
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 16px;
+    color: #F30000;
+    border: 1px solid #F30000;
+    filter: drop-shadow(-1px 2px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 5px;
+    background-color: #fff;
+    padding: 6px 20px;
+    text-decoration: none;
+}
+
+.more-products:hover {
+    color: #fff;
+    background-color: #f30000;
+}
+
+.section-cart-area-right form input {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.section-cart-area-right form label p {
+    margin-bottom: 10px;
+}
+
+.section-cart-area-right form .input-name, .section-cart-area-right form .input-cnpj {
+    width: 500px;
+    height: 35px;
+    border: 1px solid #f30000;
+    border-radius: 5px;
+    margin-bottom: 25px;
+    outline: 0;
+    padding-left: 10px;
+}
+
+.section-cart-area-right form .input-email, .section-cart-area-right form .input-phone {
+    width: 230px;
+    height: 35px;
+    border: 1px solid #f30000;
+    border-radius: 5px;
+    margin-bottom: 25px;
+    outline: 0;
+    padding-left: 10px;
+}
+
+.section-cart-area-right form textarea {
+    width: 500px;
+    height: 150px;
+    border: 1px solid #f30000;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    resize: none;
+    outline: 0;
+    padding: 10px;
+}
+
+.form-double-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.section-cart-area-right form button, .section-cart-area-right form button {
+    width: 100%;
+    background-color: #f30000;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    box-shadow: -1px 2px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    padding: 5px 0; 
+    cursor: pointer;
+    font-weight: 600;
+}
+
+.section-cart-area-right form button:hover {
     color: #f30000;
     background-color: #fff;
     border: 1px solid #f30000;
@@ -1801,10 +2146,6 @@ td {
     margin: 0 0 15px 10px;
 }
 
-.section-area-products-form {
-    
-}
-
 .product-form label p {
     margin: 10px 0 10px 0 ;
 }
@@ -2186,6 +2527,10 @@ td {
 }
 
 @media (max-width: 1300px) {
+    .category-box {
+        width: 330px;
+    }
+
     .label-details, .label-desc {
         width: 650px;
         margin-right: 20px;
@@ -2202,21 +2547,135 @@ td {
     .product-form {
         width: auto
     }
+
+    .header-search-form form input {
+        width: 280px;
+    }
 }
 
 @media (max-width: 1000px) {
+
+    .section-header-menu-area {
+        display: none;
+    }
+
+    .mobile-menu {
+        display: flex;
+    }
+
+    .section-categories-groups {
+        flex-direction: column;
+    }
+
+    .category-box {
+        width: 80vw;
+        margin-bottom: 40px;
+    }
+
+    .section-catalog-download {
+        flex-direction: column;
+        margin: 40px;
+    }
+
+    .section-about {
+        flex-direction: column;
+    }
+
     .label-details, .label-desc {
         width: 350px;
         margin-right: 20px;
     }
+
+    .section-about-left {
+        margin: 0;
+    }
+
+    .section-about-img {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 800px) {
+    .section-two-banners {
+        flex-direction: column;
+    }
+
+    .section-footer-area {
+        grid-template-areas:
+        "item1 item2"
+        "item3 item4"
+        "item6 .";
+    }
+
+    .footer-area-about-us {
+        margin: 0;
+    }
 }
 
 @media (max-width: 545px) {
+    .section-categories-area-tittle {
+        margin-bottom: 20px;
+    }
+
+    .section-catalog-tittle h3, .products-carrousell-tittle h3, .section-about-tittle h3 {
+        font-size: 14px;
+    }
+
+    .products-carrousell-tittle h3 svg {
+        height: 14px;
+    }
+
+    .section-catalog-text p, .products-carrousell-tittle a p, .section-about-text p {
+        font-size: 12px;
+    }
+    
+    .products-carrousell {
+        margin: 0 20px 100px;
+    }
+
+    .section-about-right {
+        width: 90vw;
+    }
+
+    .footer-area-about-us {
+        height: 100%;
+    }
+
+    .section-footer-area {
+        padding: 30px 0 30px 0;;
+    }
+    .product-box {
+        width: 95vw ;
+    }
     .login-modal-area {
         width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    .products-carrousell-tittle {
+        margin: 0;
+    }
+
+    .section-footer-area {
+        grid-template-areas:
+        "item1"
+        "item2"
+        "item3"
+        "item4"
+        "item6";
+    }
+    
+    .footer-area-contact, .footer-area-social, .footer-area-menu, .footer-area-about-us, .footer-area-location {
+        text-align: center;
+        margin-bottom: 10px;
+    }  
+
+    .footer-area-social ul li {
+        justify-content: center;
     }
 
     h1 {
@@ -2225,6 +2684,11 @@ td {
 }
 
 @media (max-width: 350px) {
+    
+    .category-box {
+        width: 90vw;
+    }
+
     .login-form input {
         width: 290px;
     }
